Decision tree done for real

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,175 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
+   "id": "d4d2dc25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "01f4ebe9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IDpol</th>\n",
+       "      <th>ClaimNb</th>\n",
+       "      <th>Exposure</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>VehPower</th>\n",
+       "      <th>VehAge</th>\n",
+       "      <th>DrivAge</th>\n",
+       "      <th>BonusMalus</th>\n",
+       "      <th>VehBrand</th>\n",
+       "      <th>VehGas</th>\n",
+       "      <th>Density</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>ClaimFrequency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2122523.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>D</td>\n",
+       "      <td>7</td>\n",
+       "      <td>18</td>\n",
+       "      <td>36</td>\n",
+       "      <td>95</td>\n",
+       "      <td>B1</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>1054</td>\n",
+       "      <td>R24</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3173420.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>D</td>\n",
+       "      <td>7</td>\n",
+       "      <td>17</td>\n",
+       "      <td>80</td>\n",
+       "      <td>95</td>\n",
+       "      <td>B2</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>598</td>\n",
+       "      <td>R25</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1188619.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>E</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>36</td>\n",
+       "      <td>76</td>\n",
+       "      <td>B6</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>4172</td>\n",
+       "      <td>R82</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>31400.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>A</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>73</td>\n",
+       "      <td>52</td>\n",
+       "      <td>B13</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>15</td>\n",
+       "      <td>R24</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3138755.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>E</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>37</td>\n",
+       "      <td>50</td>\n",
+       "      <td>B11</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>3021</td>\n",
+       "      <td>R53</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       IDpol  ClaimNb  Exposure Area  VehPower  VehAge  DrivAge  BonusMalus  \\\n",
+       "0  2122523.0        0      0.43    D         7      18       36          95   \n",
+       "1  3173420.0        0      0.10    D         7      17       80          95   \n",
+       "2  1188619.0        0      0.33    E         7       3       36          76   \n",
+       "3    31400.0        0      0.56    A         5       4       73          52   \n",
+       "4  3138755.0        0      0.27    E         8       0       37          50   \n",
+       "\n",
+       "  VehBrand   VehGas  Density Region  ClaimFrequency  \n",
+       "0       B1  Regular     1054    R24             0.0  \n",
+       "1       B2  Regular      598    R25             0.0  \n",
+       "2       B6  Regular     4172    R82             0.0  \n",
+       "3      B13   Diesel       15    R24             0.0  \n",
+       "4      B11   Diesel     3021    R53             0.0  "
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('claims_train.csv')\n",
+    "df['ClaimFrequency'] = df['ClaimNb'] / df['Exposure']\n",
+    "df=df[df['Exposure'] >= 0.01]\n",
+    "cap = df['ClaimFrequency'].quantile(0.995)\n",
+    "df['ClaimFrequency'] = df['ClaimFrequency'].clip(upper=cap)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "id": "25e6a5fb",
    "metadata": {},
    "outputs": [
@@ -15,17 +183,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import pprint \n",
-    "\n",
-    "df = pd.read_csv('claims_train.csv')\n",
-    "df['ClaimFrequency'] = df['ClaimNb'] / df['Exposure']\n",
-    "df=df[df['Exposure'] >= 0.01]\n",
-    "cap = df['ClaimFrequency'].quantile(0.995)\n",
-    "df['ClaimFrequency'] = df['ClaimFrequency'].clip(upper=cap)\n",
-    "df.head()\n",
-    "\n",
     "num_cols = ['VehPower', 'VehAge', 'DrivAge', 'BonusMalus', 'Density', 'Exposure']\n",
     "cat_cols = ['Area']\n",
     "\n",
