--- a/main.ipynb
+++ b/main.ipynb
@@ -2,175 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d4d2dc25",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "id": "01f4ebe9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>IDpol</th>\n",
-       "      <th>ClaimNb</th>\n",
-       "      <th>Exposure</th>\n",
-       "      <th>Area</th>\n",
-       "      <th>VehPower</th>\n",
-       "      <th>VehAge</th>\n",
-       "      <th>DrivAge</th>\n",
-       "      <th>BonusMalus</th>\n",
-       "      <th>VehBrand</th>\n",
-       "      <th>VehGas</th>\n",
-       "      <th>Density</th>\n",
-       "      <th>Region</th>\n",
-       "      <th>ClaimFrequency</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2122523.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.43</td>\n",
-       "      <td>D</td>\n",
-       "      <td>7</td>\n",
-       "      <td>18</td>\n",
-       "      <td>36</td>\n",
-       "      <td>95</td>\n",
-       "      <td>B1</td>\n",
-       "      <td>Regular</td>\n",
-       "      <td>1054</td>\n",
-       "      <td>R24</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3173420.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>D</td>\n",
-       "      <td>7</td>\n",
-       "      <td>17</td>\n",
-       "      <td>80</td>\n",
-       "      <td>95</td>\n",
-       "      <td>B2</td>\n",
-       "      <td>Regular</td>\n",
-       "      <td>598</td>\n",
-       "      <td>R25</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1188619.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>E</td>\n",
-       "      <td>7</td>\n",
-       "      <td>3</td>\n",
-       "      <td>36</td>\n",
-       "      <td>76</td>\n",
-       "      <td>B6</td>\n",
-       "      <td>Regular</td>\n",
-       "      <td>4172</td>\n",
-       "      <td>R82</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>31400.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.56</td>\n",
-       "      <td>A</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>73</td>\n",
-       "      <td>52</td>\n",
-       "      <td>B13</td>\n",
-       "      <td>Diesel</td>\n",
-       "      <td>15</td>\n",
-       "      <td>R24</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3138755.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.27</td>\n",
-       "      <td>E</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>37</td>\n",
-       "      <td>50</td>\n",
-       "      <td>B11</td>\n",
-       "      <td>Diesel</td>\n",
-       "      <td>3021</td>\n",
-       "      <td>R53</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       IDpol  ClaimNb  Exposure Area  VehPower  VehAge  DrivAge  BonusMalus  \\\n",
-       "0  2122523.0        0      0.43    D         7      18       36          95   \n",
-       "1  3173420.0        0      0.10    D         7      17       80          95   \n",
-       "2  1188619.0        0      0.33    E         7       3       36          76   \n",
-       "3    31400.0        0      0.56    A         5       4       73          52   \n",
-       "4  3138755.0        0      0.27    E         8       0       37          50   \n",
-       "\n",
-       "  VehBrand   VehGas  Density Region  ClaimFrequency  \n",
-       "0       B1  Regular     1054    R24             0.0  \n",
-       "1       B2  Regular      598    R25             0.0  \n",
-       "2       B6  Regular     4172    R82             0.0  \n",
-       "3      B13   Diesel       15    R24             0.0  \n",
-       "4      B11   Diesel     3021    R53             0.0  "
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.read_csv('claims_train.csv')\n",
-    "df['ClaimFrequency'] = df['ClaimNb'] / df['Exposure']\n",
-    "df=df[df['Exposure'] >= 0.01]\n",
-    "cap = df['ClaimFrequency'].quantile(0.995)\n",
-    "df['ClaimFrequency'] = df['ClaimFrequency'].clip(upper=cap)\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "id": "25e6a5fb",
    "metadata": {},
    "outputs": [
@@ -178,11 +10,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training RMSE: 0.8137979212454955\n"
+      "{'is_leaf': True, 'value': 0.13825320390506804}\n",
+      "Training RMSE: 0.83604324672754\n"
      ]
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "df = pd.read_csv('claims_train.csv')\n",
+    "df['ClaimFrequency'] = df['ClaimNb'] / df['Exposure']\n",
+    "df=df[df['Exposure'] >= 0.01]\n",
+    "cap = df['ClaimFrequency'].quantile(0.995)\n",
+    "df['ClaimFrequency'] = df['ClaimFrequency'].clip(upper=cap)\n",
+    "df.head()\n",
+    "\n",
     "num_cols = ['VehPower', 'VehAge', 'DrivAge', 'BonusMalus', 'Density', 'Exposure']\n",
     "cat_cols = ['Area']\n",
     "\n",
@@ -192,111 +35,44 @@
     "y_train = df['ClaimFrequency'].values\n",
     "\n",
     "class decisionTree:\n",
-    "    def __init__(self, min_samples_leaf=100, min_samples_split=20, max_depth=5):\n",
-    "        self.max_depth = max_depth\n",
-    "        self.min_samples_leaf = min_samples_leaf\n",
-    "        self.min_samples_split = min_samples_split\n",
+    "    num_cols = ['VehPower', 'VehAge', 'DrivAge', 'BonusMalus', 'Density', 'Exposure']\n",
+    "cat_cols = ['Area']\n",
+    "\n",
+    "df_dummies = pd.get_dummies(df[cat_cols], drop_first=False)\n",
+    "\n",
+    "X_train = pd.concat([df[num_cols], df_dummies], axis=1).values\n",
+    "y_train = df['ClaimFrequency'].values\n",
+    "\n",
+    "class decisionTree:\n",
+    "    def __init__(self):\n",
     "        self.tree = None\n",
-    "    \n",
+    "\n",
     "    def fit(self, X, y):\n",
     "        X = np.asarray(X)\n",
     "        y = np.asarray(y)\n",
-    "        self.tree = self.buildTree(X, y, 0)\n",
+    "\n",
+    "        self.tree = {\n",
+    "            \"is_leaf\": True,\n",
+    "            \"value\": float(y.mean())\n",
+    "        }\n",
+    "\n",
+    "    def predict_row(self, row, node):\n",
+    "        return node[\"value\"]\n",
     "\n",
     "    def predict(self, X):\n",
     "        X = np.asarray(X)\n",
     "        return np.array([self.predict_row(row, self.tree) for row in X])\n",
-    "\n",
-    "    def mse(self, y):\n",
-    "        return ((y-y.mean())**2).mean()\n",
-    "\n",
-    "    def buildTree(self, X, y, depth):\n",
-    "        n_samples, n_features = X.shape\n",
-    "        node = {}\n",
-    "        node[\"value\"] = float(y.mean())\n",
-    "\n",
-    "        best_loss = np.inf\n",
-    "        best_thresh = None\n",
-    "        best_feat = None\n",
-    "\n",
-    "        if (depth >= self.max_depth or\n",
-    "            n_samples < self.min_samples_split or\n",
-    "            np.unique(y).size == 1):\n",
-    "            node['is_leaf'] = True\n",
-    "            return node\n",
-    "\n",
-    "        for feat_idx in range(n_features):\n",
-    "            values = X[:, feat_idx] #VehAge\n",
-    "            unique_vals = np.unique(values)\n",
-    "            if unique_vals.size == 1:\n",
-    "                continue\n",
-    "            trashholds = (unique_vals[:-1] + unique_vals[1:]) / 2\n",
-    "            for t in trashholds:\n",
-    "                left_mask = values <= t\n",
-    "                right_mask = ~left_mask\n",
-    "\n",
-    "                n_left = left_mask.sum()\n",
-    "                n_right = right_mask.sum()\n",
-    "\n",
-    "                if n_left < self.min_samples_leaf or n_right < self.min_samples_leaf:\n",
-    "                    continue\n",
-    "                \n",
-    "                y_left = y[left_mask]\n",
-    "                y_right = y[right_mask]\n",
-    "\n",
-    "                mse_left = self.mse(y_left)\n",
-    "                mse_right = self.mse(y_right)\n",
-    "\n",
-    "                loss = (n_left * mse_left + n_right * mse_right) / (n_samples)\n",
-    "\n",
-    "                if loss < best_loss:\n",
-    "                    best_loss = loss\n",
-    "                    best_thresh = t\n",
-    "                    best_feat = feat_idx\n",
-    "        \n",
-    "        if best_feat is None:\n",
-    "            node['is_leaf'] = True\n",
-    "            return node\n",
-    "\n",
-    "        node['is_leaf'] = False\n",
-    "        node['feature_index'] = best_feat\n",
-    "        node['threshold'] = best_thresh\n",
-    "\n",
-    "        values = X[:, best_feat]\n",
-    "        left_mask = values <= best_thresh\n",
-    "        right_mask = ~left_mask\n",
-    "\n",
-    "        node['left'] = self.buildTree(X[left_mask], y[left_mask], depth + 1)\n",
-    "        node['right'] = self.buildTree(X[right_mask], y[right_mask], depth + 1)\n",
-    "\n",
-    "        return node\n",
-    "\n",
-    "    def predict_row(self, row, node):\n",
-    "        while not node['is_leaf']:\n",
-    "            feat_idx = node['feature_index']\n",
-    "            thresh = node['threshold']\n",
-    "            if row[feat_idx] <= thresh:\n",
-    "                node = node['left']\n",
-    "            else:\n",
-    "                node = node['right']\n",
-    "        return node['value']\n",
-    "\n",
     "\n",
     "def rmse(y_true, y_pred):\n",
     "    y_true = np.asarray(y_true)\n",
     "    y_pred = np.asarray(y_pred)\n",
     "    return np.sqrt(((y_true - y_pred) ** 2).mean())\n",
     "\n",
-    "tree = decisionTree(\n",
-    "    max_depth=12,\n",
-    "    min_samples_split=200,\n",
-    "    min_samples_leaf=10,\n",
-    ")\n",
-    "\n",
+    "tree = decisionTree()\n",
     "tree.fit(X_train, y_train)\n",
-    "\n",
     "y_train_pred = tree.predict(X_train)\n",
     "\n",
+    "print(tree.tree)\n",
     "print(\"Training RMSE:\", rmse(y_train, y_train_pred))\n"
    ]
   }
