--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "25e6a5fb",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'is_leaf': True, 'value': 0.13825320390506804}\n",
-      "Training RMSE: 0.83604324672754\n"
+      "{'value': 0.13825320390506804, 'is_leaf': False, 'feature_index': 1, 'threshold': 0.5, 'left': {'is_leaf': True, 'value': 0.4363146882778197}, 'right': {'is_leaf': True, 'value': 0.11089006911462748}}\n",
+      "Training RMSE: 0.8311512580908458\n"
      ]
     }
    ],
@@ -35,33 +35,90 @@
     "y_train = df['ClaimFrequency'].values\n",
     "\n",
     "class decisionTree:\n",
-    "    num_cols = ['VehPower', 'VehAge', 'DrivAge', 'BonusMalus', 'Density', 'Exposure']\n",
-    "cat_cols = ['Area']\n",
-    "\n",
-    "df_dummies = pd.get_dummies(df[cat_cols], drop_first=False)\n",
-    "\n",
-    "X_train = pd.concat([df[num_cols], df_dummies], axis=1).values\n",
-    "y_train = df['ClaimFrequency'].values\n",
-    "\n",
-    "class decisionTree:\n",
     "    def __init__(self):\n",
     "        self.tree = None\n",
+    "\n",
+    "    def mse(self, y):\n",
+    "        return ((y - y.mean()) ** 2).mean()\n",
     "\n",
     "    def fit(self, X, y):\n",
     "        X = np.asarray(X)\n",
     "        y = np.asarray(y)\n",
+    "        n_samples, n_features = X.shape\n",
     "\n",
-    "        self.tree = {\n",
+    "        root = {\"value\": float(y.mean())}\n",
+    "\n",
+    "        best_loss = np.inf\n",
+    "        best_feat = None\n",
+    "        best_thresh = None\n",
+    "\n",
+    "        for feat_idx in range(n_features):\n",
+    "            values = X[:, feat_idx]\n",
+    "            unique_vals = np.unique(values)\n",
+    "            if unique_vals.size == 1:\n",
+    "                continue\n",
+    "\n",
+    "            thresholds = (unique_vals[:-1] + unique_vals[1:]) / 2.0\n",
+    "\n",
+    "            for t in thresholds:\n",
+    "                left_mask = values <= t\n",
+    "                right_mask = ~left_mask\n",
+    "\n",
+    "                if left_mask.sum() == 0 or right_mask.sum() == 0:\n",
+    "                    continue\n",
+    "\n",
+    "                y_left = y[left_mask]\n",
+    "                y_right = y[right_mask]\n",
+    "\n",
+    "                mse_left = self.mse(y_left)\n",
+    "                mse_right = self.mse(y_right)\n",
+    "\n",
+    "                loss = (left_mask.sum() * mse_left + right_mask.sum() * mse_right) / n_samples\n",
+    "\n",
+    "                if loss < best_loss:\n",
+    "                    best_loss = loss\n",
+    "                    best_feat = feat_idx\n",
+    "                    best_thresh = float(t)\n",
+    "\n",
+    "        if best_feat is None:\n",
+    "            root[\"is_leaf\"] = True\n",
+    "            self.tree = root\n",
+    "            return\n",
+    "\n",
+    "        root[\"is_leaf\"] = False\n",
+    "        root[\"feature_index\"] = best_feat\n",
+    "        root[\"threshold\"] = best_thresh\n",
+    "\n",
+    "        values = X[:, best_feat]\n",
+    "        left_mask = values <= best_thresh\n",
+    "        right_mask = ~left_mask\n",
+    "\n",
+    "        root[\"left\"] = {\n",
     "            \"is_leaf\": True,\n",
-    "            \"value\": float(y.mean())\n",
+    "            \"value\": float(y[left_mask].mean())\n",
+    "        }\n",
+    "        root[\"right\"] = {\n",
+    "            \"is_leaf\": True,\n",
+    "            \"value\": float(y[right_mask].mean())\n",
     "        }\n",
     "\n",
+    "        self.tree = root\n",
+    "\n",
     "    def predict_row(self, row, node):\n",
-    "        return node[\"value\"]\n",
+    "        if node[\"is_leaf\"]:\n",
+    "            return node[\"value\"]\n",
+    "        feat_idx = node[\"feature_index\"]\n",
+    "        thresh = node[\"threshold\"]\n",
+    "        if row[feat_idx] <= thresh:\n",
+    "            child = node[\"left\"]\n",
+    "        else:\n",
+    "            child = node[\"right\"]\n",
+    "        return child[\"value\"]\n",
     "\n",
     "    def predict(self, X):\n",
     "        X = np.asarray(X)\n",
     "        return np.array([self.predict_row(row, self.tree) for row in X])\n",
+    "\n",
     "\n",
     "def rmse(y_true, y_pred):\n",
     "    y_true = np.asarray(y_true)\n",
