RMSE by Area and Density

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d4d2dc25",
    "metadata": {},
    "outputs": [],
@@ -12,8 +12,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d9628ef",
+   "metadata": {},
+   "source": [
+    "Created ClaimFrequancy to get the expected number of claims per year"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
+   "id": "fe853202",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('claims_train.csv')\n",
+    "df['ClaimFrequency'] = df['ClaimNb'] / df['Exposure']\n",
+    "df = pd.read_csv('claims_train.csv')\n",
+    "df['ClaimFrequency'] = df['ClaimNb'] / df['Exposure']\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bd26802",
+   "metadata": {},
+   "source": [
+    "Remove outliers. Without it we would have ClaimFrequancy values of 732"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "eaa69bd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=df[df['Exposure'] >= 0.01]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f02ac90",
+   "metadata": {},
+   "source": [
+    "Added a cap to ClaimFrequancy so we can avoid values of 366 ClaimFrequancies in a year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "01f4ebe9",
    "metadata": {},
    "outputs": [
@@ -154,15 +201,12 @@
        "4      B11   Diesel     3021    R53             0.0  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('claims_train.csv')\n",
-    "df['ClaimFrequency'] = df['ClaimNb'] / df['Exposure']\n",
-    "df=df[df['Exposure'] >= 0.01]\n",
     "cap = df['ClaimFrequency'].quantile(0.995)\n",
     "df['ClaimFrequency'] = df['ClaimFrequency'].clip(upper=cap)\n",
     "df.head()"
@@ -170,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "id": "25e6a5fb",
    "metadata": {},
    "outputs": [
@@ -178,18 +222,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training RMSE: 0.8137979212454955\n"
+      "Training RMSE: 0.819263848833977\n"
      ]
     }
    ],
    "source": [
-    "num_cols = ['VehPower', 'VehAge', 'DrivAge', 'BonusMalus', 'Density', 'Exposure']\n",
+    "num_cols = ['VehPower', 'VehAge', 'DrivAge', 'BonusMalus', 'Density']\n",
     "cat_cols = ['Area']\n",
     "\n",
     "df_dummies = pd.get_dummies(df[cat_cols], drop_first=False)\n",
     "\n",
     "X_train = pd.concat([df[num_cols], df_dummies], axis=1).values\n",
     "y_train = df['ClaimFrequency'].values\n",
+    "\n",
     "\n",
     "class decisionTree:\n",
     "    def __init__(self, min_samples_leaf=100, min_samples_split=20, max_depth=5):\n",
@@ -226,7 +271,7 @@
     "            return node\n",
     "\n",
     "        for feat_idx in range(n_features):\n",
-    "            values = X[:, feat_idx] #VehAge\n",
+    "            values = X[:, feat_idx]\n",
     "            unique_vals = np.unique(values)\n",
     "            if unique_vals.size == 1:\n",
     "                continue\n",
@@ -297,7 +342,89 @@
     "\n",
     "y_train_pred = tree.predict(X_train)\n",
     "\n",
-    "print(\"Training RMSE:\", rmse(y_train, y_train_pred))\n"
+    "print('Training RMSE:', rmse(y_train, y_train_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c273f56e",
+   "metadata": {},
+   "source": [
+    "RMSE by area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "1ec60adf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE by Area:\n",
+      "Area A: 0.7245\n",
+      "Area B: 0.7704\n",
+      "Area C: 0.7922\n",
+      "Area D: 0.8614\n",
+      "Area E: 0.8994\n",
+      "Area F: 1.0782\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = tree.predict(X_train)\n",
+    "\n",
+    "def rmse(y_true, y_pred):\n",
+    "    y_true = np.asarray(y_true)\n",
+    "    y_pred = np.asarray(y_pred)\n",
+    "    return np.sqrt(((y_true - y_pred) ** 2).mean())\n",
+    "\n",
+    "areas = df['Area'].unique()\n",
+    "\n",
+    "print(\"RMSE by Area:\")\n",
+    "for a in sorted(areas):\n",
+    "    mask = (df['Area'] == a)\n",
+    "    area_rmse = rmse(y_train[mask], y_pred[mask])\n",
+    "    print(f\"Area {a}: {area_rmse:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6403429",
+   "metadata": {},
+   "source": [
+    "RMSE by density quartile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "fb674b6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "RMSE by Density Quartile:\n",
+      "Q1: 0.7423\n",
+      "Q2: 0.7963\n",
+      "Q3: 0.8304\n",
+      "Q4: 0.9297\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['DensityQuartile'] = pd.qcut(df['Density'], 4, labels=['Q1', 'Q2', 'Q3', 'Q4'])\n",
+    "print(\"\\nRMSE by Density Quartile:\")\n",
+    "for q in ['Q1', 'Q2', 'Q3', 'Q4']:\n",
+    "    mask = (df['DensityQuartile'] == q)\n",
+    "    quartile_rmse = rmse(y_train[mask], y_pred[mask])\n",
+    "    print(f\"{q}: {quartile_rmse:.4f}\")\n",
+    "\n"
    ]
   }
  ],
