M2 done without refference

--- a/main.ipynb
+++ b/main.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -355,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "1ec60adf",
    "metadata": {},
    "outputs": [
@@ -364,12 +365,12 @@
      "output_type": "stream",
      "text": [
       "RMSE by Area:\n",
-      "Area A: 0.7245\n",
-      "Area B: 0.7704\n",
-      "Area C: 0.7922\n",
-      "Area D: 0.8614\n",
-      "Area E: 0.8994\n",
-      "Area F: 1.0782\n"
+      "Area A: 0.7203\n",
+      "Area B: 0.7639\n",
+      "Area C: 0.7837\n",
+      "Area D: 0.8534\n",
+      "Area E: 0.8900\n",
+      "Area F: 1.0606\n"
      ]
     }
    ],
@@ -400,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "fb674b6b",
    "metadata": {},
    "outputs": [
@@ -410,10 +411,10 @@
      "text": [
       "\n",
       "RMSE by Density Quartile:\n",
-      "Q1: 0.7423\n",
-      "Q2: 0.7963\n",
-      "Q3: 0.8304\n",
-      "Q4: 0.9297\n"
+      "Q1: 0.7370\n",
+      "Q2: 0.7871\n",
+      "Q3: 0.8244\n",
+      "Q4: 0.9184\n"
      ]
     }
    ],
@@ -426,11 +427,278 @@
     "    print(f\"{q}: {quartile_rmse:.4f}\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34f69a0b",
+   "metadata": {},
+   "source": [
+    "M2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5217b54b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((542410, 12), (135603, 12))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "ROOT = Path(\".\")  # adjust if needed\n",
+    "train_path = ROOT / \"claims_train.csv\"\n",
+    "test_path  = ROOT / \"claims_test.csv\"\n",
+    "\n",
+    "df_train = pd.read_csv(train_path)\n",
+    "df_test  = pd.read_csv(test_path)\n",
+    "\n",
+    "# Target variable: ClaimFrequency = ClaimNb / Exposure\n",
+    "for df in [df_train, df_test]:\n",
+    "    df[\"ClaimFrequency\"] = df[\"ClaimNb\"] / df[\"Exposure\"]\n",
+    "\n",
+    "# Optional: filter tiny exposures, cap extreme frequencies as you already did\n",
+    "min_exposure = 1e-3\n",
+    "for name in [\"train\", \"test\"]:\n",
+    "    if name == \"train\":\n",
+    "        df_train = df_train[df_train[\"Exposure\"] > min_exposure].copy()\n",
+    "    else:\n",
+    "        df_test = df_test[df_test[\"Exposure\"] > min_exposure].copy()\n",
+    "\n",
+    "q = df_train[\"ClaimFrequency\"].quantile(0.995)\n",
+    "df_train[\"ClaimFrequency\"] = df_train[\"ClaimFrequency\"].clip(upper=q)\n",
+    "df_test[\"ClaimFrequency\"]  = df_test[\"ClaimFrequency\"].clip(upper=q)\n",
+    "\n",
+    "# ---- Choose features ----\n",
+    "num_cols = [\"VehPower\", \"VehAge\", \"DrivAge\", \"BonusMalus\", \"Density\", \"Exposure\"]\n",
+    "cat_cols = [\"Area\"]   # keep it simple, but you can add more later\n",
+    "\n",
+    "# One-hot encode categorical features\n",
+    "train_dummies = pd.get_dummies(df_train[cat_cols], drop_first=False)\n",
+    "test_dummies  = pd.get_dummies(df_test[cat_cols],  drop_first=False)\n",
+    "\n",
+    "# Align columns so train & test match exactly\n",
+    "train_dummies, test_dummies = train_dummies.align(test_dummies, join=\"left\", axis=1, fill_value=0)\n",
+    "\n",
+    "X_train_df = pd.concat([df_train[num_cols], train_dummies], axis=1)\n",
+    "X_test_df  = pd.concat([df_test[num_cols],  test_dummies],  axis=1)\n",
+    "\n",
+    "y_train = df_train[\"ClaimFrequency\"].values.astype(np.float64)\n",
+    "y_test  = df_test[\"ClaimFrequency\"].values.astype(np.float64)\n",
+    "\n",
+    "X_train = X_train_df.values.astype(np.float64)\n",
+    "X_test  = X_test_df.values.astype(np.float64)\n",
+    "\n",
+    "# Standardize features (very important for NN)\n",
+    "X_mean = X_train.mean(axis=0, keepdims=True)\n",
+    "X_std  = X_train.std(axis=0, keepdims=True) + 1e-8\n",
+    "\n",
+    "X_train_std = (X_train - X_mean) / X_std\n",
+    "X_test_std  = (X_test  - X_mean) / X_std\n",
+    "\n",
+    "X_train_std.shape, X_test_std.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27b6daa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "class FFNNRegressor:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        input_dim,\n",
+    "        hidden_dim=32,\n",
+    "        lr=0.01,\n",
+    "        epochs=80,\n",
+    "        batch_size=2048,\n",
+    "        l2=0.0,\n",
+    "        random_state=0,\n",
+    "        verbose=True,\n",
+    "    ):\n",
+    "        self.input_dim = input_dim\n",
+    "        self.hidden_dim = hidden_dim\n",
+    "        self.lr = lr\n",
+    "        self.epochs = epochs\n",
+    "        self.batch_size = batch_size\n",
+    "        self.l2 = l2\n",
+    "        self.verbose = verbose\n",
+    "\n",
+    "        rng = np.random.RandomState(random_state)\n",
+    "\n",
+    "        self.W1 = rng.randn(input_dim, hidden_dim) / np.sqrt(input_dim)\n",
+    "        self.b1 = np.zeros((1, hidden_dim))\n",
+    "\n",
+    "        self.W2 = rng.randn(hidden_dim, 1) / np.sqrt(hidden_dim)\n",
+    "        self.b2 = np.zeros((1, 1))\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def relu(z):\n",
+    "        return np.maximum(0.0, z)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def relu_deriv(z):\n",
+    "        return (z > 0.0).astype(np.float64)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def mse(y_true, y_pred):\n",
+    "        y_true = y_true.reshape(-1, 1)\n",
+    "        y_pred = y_pred.reshape(-1, 1)\n",
+    "        return np.mean((y_true - y_pred) ** 2)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def rmse(y_true, y_pred):\n",
+    "        return np.sqrt(FFNNRegressor.mse(y_true, y_pred))\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def r2_score(y_true, y_pred):\n",
+    "        y_true = y_true.reshape(-1)\n",
+    "        y_pred = y_pred.reshape(-1)\n",
+    "        ss_res = np.sum((y_true - y_pred) ** 2)\n",
+    "        ss_tot = np.sum((y_true - y_true.mean()) ** 2)\n",
+    "        return 1.0 - ss_res / ss_tot\n",
+    "\n",
+    "    def _forward(self, X):\n",
+    "        \"\"\"\n",
+    "        X: (batch_size, input_dim)\n",
+    "        Returns (z1, a1, z2, y_pred)\n",
+    "        \"\"\"\n",
+    "        z1 = X @ self.W1 + self.b1\n",
+    "        a1 = self.relu(z1)\n",
+    "        z2 = a1 @ self.W2 + self.b2\n",
+    "        y_pred = z2\n",
+    "        return z1, a1, z2, y_pred\n",
+    "\n",
+    "    def fit(self, X, y):\n",
+    "        \"\"\"\n",
+    "        X: (N, D), y: (N,)\n",
+    "        \"\"\"\n",
+    "        X = np.asarray(X, dtype=np.float64)\n",
+    "        y = np.asarray(y, dtype=np.float64).reshape(-1, 1)\n",
+    "        N, D = X.shape\n",
+    "        assert D == self.input_dim, \"input_dim mismatch\"\n",
+    "\n",
+    "        for epoch in range(self.epochs):\n",
+    "            idx = np.random.permutation(N)\n",
+    "            X_shuffled = X[idx]\n",
+    "            y_shuffled = y[idx]\n",
+    "\n",
+    "            for start in range(0, N, self.batch_size):\n",
+    "                end = start + self.batch_size\n",
+    "                X_batch = X_shuffled[start:end]\n",
+    "                y_batch = y_shuffled[start:end]\n",
+    "                if X_batch.shape[0] == 0:\n",
+    "                    continue\n",
+    "\n",
+    "                z1, a1, z2, y_pred = self._forward(X_batch)\n",
+    "\n",
+    "                batch_size = X_batch.shape[0]\n",
+    "                dL_dy = 2.0 * (y_pred - y_batch) / batch_size \n",
+    "\n",
+    "                dL_dW2 = a1.T @ dL_dy\n",
+    "                dL_db2 = np.sum(dL_dy, axis=0, keepdims=True) \n",
+    "\n",
+    "                if self.l2 > 0.0:\n",
+    "                    dL_dW2 += 2.0 * self.l2 * self.W2\n",
+    "\n",
+    "                dL_da1 = dL_dy @ self.W2.T\n",
+    "                dL_dz1 = dL_da1 * self.relu_deriv(z1)\n",
+    "\n",
+    "                dL_dW1 = X_batch.T @ dL_dz1\n",
+    "                dL_db1 = np.sum(dL_dz1, axis=0, keepdims=True)\n",
+    "\n",
+    "                if self.l2 > 0.0:\n",
+    "                    dL_dW1 += 2.0 * self.l2 * self.W1\n",
+    "\n",
+    "                self.W2 -= self.lr * dL_dW2\n",
+    "                self.b2 -= self.lr * dL_db2\n",
+    "                self.W1 -= self.lr * dL_dW1\n",
+    "                self.b1 -= self.lr * dL_db1\n",
+    "\n",
+    "            if self.verbose and (epoch % 10 == 0 or epoch == self.epochs - 1):\n",
+    "                _, _, _, y_pred_full = self._forward(X)\n",
+    "                loss = self.mse(y, y_pred_full)\n",
+    "                rmse_val = self.rmse(y, y_pred_full)\n",
+    "                print(f\"Epoch {epoch+1:3d}/{self.epochs} - MSE: {loss:.6f} - RMSE: {rmse_val:.4f}\")\n",
+    "\n",
+    "    def predict(self, X):\n",
+    "        X = np.asarray(X, dtype=np.float64)\n",
+    "        _, _, _, y_pred = self._forward(X)\n",
+    "        return y_pred.ravel()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19361a5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch   1/80 - MSE: 0.804691 - RMSE: 0.8970\n",
+      "Epoch  11/80 - MSE: 0.789238 - RMSE: 0.8884\n",
+      "Epoch  21/80 - MSE: 0.788333 - RMSE: 0.8879\n",
+      "Epoch  31/80 - MSE: 0.787965 - RMSE: 0.8877\n",
+      "Epoch  41/80 - MSE: 0.787829 - RMSE: 0.8876\n",
+      "Epoch  51/80 - MSE: 0.787584 - RMSE: 0.8875\n",
+      "Epoch  61/80 - MSE: 0.787412 - RMSE: 0.8874\n",
+      "Epoch  71/80 - MSE: 0.787209 - RMSE: 0.8872\n",
+      "Epoch  80/80 - MSE: 0.787139 - RMSE: 0.8872\n",
+      "\n",
+      "Scratch NN (M2) performance:\n",
+      "Train RMSE: 0.8872\n",
+      "Test  RMSE: 0.8881\n",
+      "Train R²:   0.0107\n",
+      "Test  R²:   0.0104\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_dim = X_train_std.shape[1]\n",
+    "\n",
+    "nn = FFNNRegressor(\n",
+    "    input_dim=input_dim,\n",
+    "    hidden_dim=32,\n",
+    "    lr=0.01,\n",
+    "    epochs=80,\n",
+    "    batch_size=2048,\n",
+    "    l2=1e-4,\n",
+    "    random_state=42,\n",
+    "    verbose=True\n",
+    ")\n",
+    "\n",
+    "nn.fit(X_train_std, y_train)\n",
+    "\n",
+    "y_pred_train = nn.predict(X_train_std)\n",
+    "y_pred_test  = nn.predict(X_test_std)\n",
+    "\n",
+    "print(\"\\nScratch NN (M2) performance:\")\n",
+    "print(f\"Train RMSE: {nn.rmse(y_train, y_pred_train):.4f}\")\n",
+    "print(f\"Test  RMSE: {nn.rmse(y_test,  y_pred_test):.4f}\")\n",
+    "print(f\"Train R²:   {nn.r2_score(y_train, y_pred_train):.4f}\")\n",
+    "print(f\"Test  R²:   {nn.r2_score(y_test,  y_pred_test):.4f}\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
